# skill_auditor

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-10-skill-auditor-design.md  2026-03-10-skill-auditor-implementation.md
skill_auditor/: __init__.py  config.py  embeddings.py  evaluator.py  models.py  reporter.py  scanner.py
tests/: __init__.py  test_cli.py  test_config.py  test_embeddings.py  test_evaluator.py  test_integration.py  test_models.py  test_reporter.py  test_scanner.py
