[project]
name = "skill_auditor"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "ollama>=0.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
skill-auditor = "skill_auditor:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
